Fix support for null fields and Boolean type types in RequestFactory. Null fix patch by icsy
Review at http://gwt-code-reviews.appspot.com/739801

Review by: amitmanjhi@google.com

git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@8484 8db76d5a-ed1c-0410-87a9-c151d255dfc7